# tsh

./: .gitignore  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vite.config.ts
scripts/: build-win-gnu.sh  prepare-webview2-fixed.sh
src/: App.tsx  main.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/ui/: alert.tsx  button.tsx  card.tsx  table.tsx  tabs.tsx
